<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.0</version>
		<relativePath/>
	</parent>

	<groupId>tr.com.medlineadana</groupId>
	<artifactId>verbal-order</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>verbal-order</name>
	<description>Verbal order confirmation system</description>
	<packaging>war</packaging>
	<properties>
		<java.version>17</java.version>
		<io.springfox.version>3.0.0</io.springfox.version>
		<mapstruct.version>1.4.2.Final</mapstruct.version>
		<validation-api.version>2.0.1.Final</validation-api.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-boot-starter</artifactId>
			<version>${io.springfox.version}</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${io.springfox.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>${validation-api.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>verbal-order-service</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<argLine>-Dfile.encoding=UTF-8 --add-opens java.base/java.time=ALL-UNNAMED</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<verbose>true</verbose>
						<release>${java.version}</release>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<executable>${JAVA_17_HOME}/bin/javac</executable>
						<optimize>true</optimize>
						<encoding>UTF-8</encoding>
						<showWarnings>true</showWarnings>
						<showDeprecation>true</showDeprecation>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
							<path>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-configuration-processor</artifactId>
								<version>2.5.0</version>
							</path>
							<path>
								<groupId>org.hibernate</groupId>
								<artifactId>hibernate-jpamodelgen</artifactId>
								<version>${hibernate.version}</version>
							</path>
						</annotationProcessorPaths>
						<compilerArgs>
							<compilerArg>-J-Duser.language=en_us</compilerArg>
							<compilerArg>-J-Duser.country=US</compilerArg>
							<compilerArg>-J-Dfile.encoding=UTF-8</compilerArg>
							<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
							<arg>-Amapstruct.suppressGeneratorVersionInfoComment=true</arg>
							<arg>-Amapstruct.defaultComponentModel=spring</arg>
							<arg>-Amapstruct.unmappedTargetPolicy=IGNORE</arg>
						</compilerArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-maven-plugin</artifactId>
				<version>4.2.1</version>
				<configuration>
					<propertyFile>${profile.propertyFile}</propertyFile>
					<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
					<migrationSqlOutputFile>target/verbal-order-service-${spring.profiles.active}.sql
					</migrationSqlOutputFile>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>liquibase</id>
			<properties>
				<profile.propertyFile>src/main/resources/db/changelog/liquibase.properties</profile.propertyFile>
			</properties>
		</profile>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<JAVA_17_HOME>C:\Program Files\Java\jdk-17.0.1</JAVA_17_HOME>
			</properties>
		</profile>
	</profiles>

</project>
